# ground-cyber-plugin

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/sample-report/: groundcyber-report.html  groundcyber-report.json  groundcyber-report.md
examples/workflows/: closure-audit.yml
src/groundcyber/: __init__.py  audit.py  cli.py  config.py  github_client.py  models.py  redact.py  report.py  scoring.py
tests/: test_action.py  test_cli.py  test_config.py  test_github_client.py  test_redact.py  test_reports.py  test_scoring.py
