[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundcyber"
version = "0.3.0"
description = "False-closure verification for GitHub Secret Scanning alerts. Closed is a status. Revoked is evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
groundcyber = "groundcyber.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["groundcyber*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
